Details
Description
Scenario is:
- Connect with clean session
- Subscribe to topic A
- Loose connection / connection drop
- Reconnect (keeping cleansession)
- Resubscribe
On the resubscribe the client will fail as it has the subscription still in the cache and it will only return that object, but not send the command to the broker.
Workaround is to not use a clean session for reconnects.